fix article chart section number text align

--- a/src/css/articleHome/ArticleChartSection.css
+++ b/src/css/articleHome/ArticleChartSection.css
@@ -33,7 +33,8 @@
 }
 
 .ArticleChartList_Rank {
-  min-width: 10px;
+  width: 18px;
+  text-align: center;
   align-self: center;
   font-family: Roboto, Sans-serif;
   font-size: 18px;
